[project]
name = "go-co2-data-processing"
version = "0.1.0"
description = "Scripts used to read xCO2 data from an automated flowing pCO2 measuring system from General Oceanics Inc. Model 8050 with a LI-7810. "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl",
    "pandas",
    "polars",
    "pyarrow",
    "numpy",
    "scipy",
    "folium",
    "plotly",
]
